// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.scopes.access.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/scopes/access/v1;accessv1";

// ScopedAccessListMember descibes a member of a scoped access list.
message ScopedAccessListMember {
  // Kind is the resource kind.
  string kind = 1;

  // SubKind is the resource sub-kind.
  string sub_kind = 2;

  // Version is the resource version.
  string version = 3;

  // Metadata contains the resource metadata.
  teleport.header.v1.Metadata metadata = 4;

  // Scope is the scope of the access list member resource. It must match the
  // scope of the scoped access list.
  string scope = 5;

  // spec is the specification for the scoped access list member.
  ScopedAccessListMemberSpec spec = 6;
}

// ScopedAccessListMemberSpec is the specification for the scoped access list member.
message ScopedAccessListMemberSpec {
  // associated Access List.
  string access_list = 1;

  // name is the name of the member of the Access List.
  string name = 2;

  // membership_kind describes the type of membership.
  MembershipKind membership_kind = 3;
}

// MembershipKind represents the different kinds of list membership
enum MembershipKind {
  // MEMBERSHIP_KIND_UNSPECIFIED represents list members that are of
  // unspecified membership kind, defaulting to being treated as type USER.
  MEMBERSHIP_KIND_UNSPECIFIED = 0;
  // MEMBERSHIP_KIND_USER represents list members that are normal users.
  MEMBERSHIP_KIND_USER = 1;
  // MEMBERSHIP_KIND_LIST represents list members that are nested Access Lists.
  MEMBERSHIP_KIND_LIST = 2;
}
